plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.codehows'
version = '0.0.1-SNAPSHOT'
description = 'taelim-be'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    // ==============================
    // Spring Boot 스타터
    // ==============================
    implementation 'org.springframework.boot:spring-boot-starter-web'         // Web MVC
//    implementation 'org.springframework.boot:spring-boot-starter-webflux'     // WebFlux
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'    // JPA
//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'        // JDBC
    implementation 'org.springframework.boot:spring-boot-starter-security'    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-validation'  // Bean Validation

    // ==============================
    // MySQL Connector
    // ==============================
    runtimeOnly 'com.mysql:mysql-connector-j'

    // ==============================
    // QueryDSL
    // ==============================
    implementation 'com.querydsl:querydsl-apt:5.1.0'
    implementation 'com.querydsl:querydsl-apt:5.1.0:jpa'

    // ==============================
    // 모델 매핑
    // ==============================
    implementation 'org.modelmapper:modelmapper:3.1.0'

    // ==============================
    // JWT
    // ==============================
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // ==============================
    // LangChain4j 및 Milvus / Google GenAI
    // ==============================
    implementation 'dev.langchain4j:langchain4j-spring-boot-starter:0.31.0'
    implementation 'dev.langchain4j:langchain4j-milvus:0.31.0'
    implementation 'dev.langchain4j:langchain4j:0.31.0'

    // ⭐ 핵심: MapChatMemoryProvider가 포함된 core 모듈을 명시적으로 추가
    implementation 'dev.langchain4j:langchain4j-core:0.31.0'

    implementation 'com.google.genai:google-genai:1.28.0'

    implementation platform('io.grpc:grpc-bom:1.59.1') 
    implementation 'io.grpc:grpc-api'
    implementation 'io.grpc:grpc-core'
    implementation 'io.grpc:grpc-protobuf'
    implementation 'io.grpc:grpc-stub'
    implementation 'io.grpc:grpc-services'
    configurations.all {
        resolutionStrategy.eachDependency { details ->
            if (details.requested.group == 'io.grpc') {
                details.useVersion '1.59.1'
            }
        }
    }

    // ==============================
    // Gson
    // ==============================
    implementation 'com.google.code.gson:gson'

    // ==============================
    // Lombok
    // ==============================
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ==============================
    // 테스트
    // ==============================
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // csv 임베딩
    implementation 'org.apache.commons:commons-csv:1.10.0'
    implementation 'commons-io:commons-io:2.16.1'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters"
}